frontend/test/should_pass/exectype_AssignConstToVar.grg
using exectype;

rule r
{
	modify  {
		exec(xby:byte=3y && xsh:short=3s && x:int=3 && xl:long=3l && y:string="fool" && z:foo=foo::Bar
				&& u:double=3.141592654 && l:float=3.141f && v:boolean=true
				&& w:set<int>=set<int>{} && k:map<A,H>=map<A,H>{});
	}
}
