frontend/test/should_fail/array_min_exec.grg
using array_model_001b;

test ti(var x:int, var y:int)
{
}

rule min {
	a:A;

	modify {
	---
		exec(ti(array<string>["1","2"].min(), a.niceArray.min()));
	}
}
